syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/go-park-mail-ru/2023_2_OND_team/api/auth";

package auth;

service Auth {
    rpc Register(RegisterData) returns (google.protobuf.Empty) {}
    rpc Login(Credentials) returns (Session) {}
    rpc Logout(Session) returns (google.protobuf.Empty) {}
    rpc GetUserID(Session) returns (UserID) {}
}

message Credentials {
    string password = 1;
    string username = 2;
}

message RegisterData {
    Credentials cred = 1;
    string email = 2;
}

message User {
    int64 id = 1;
    string username = 2;
    string avatar = 3;
}

message Session {
    string key = 1;
    int64 userID = 2;
    google.protobuf.Timestamp expire = 3;
}

message UserID {
    int64 id = 1;
}